...
 * This class holds various parameters that a user can input to customize a workout session.
 * It includes total number of cycles, duration of workout and rest intervals,
 * as well as warmup and cooldown durations.
 */
class WorkoutUserInputs {
    /**
     * Input that we've received from the "Cycles" TextField.
     */
    var totalCycles by mutableStateOf("8")

    /**
     * Input that we've received from the "Work" TextField.
     */
    var secondsWork by mutableStateOf("20")

    /**
     * Input that we've received from the "Rest" TextField.
     */
    var secondsRest by mutableStateOf("10")

    /**
     * Duration of warmup period before starting the main workout session.
     *
     * This property represents the length of time in seconds that the user should
     * spend warming up before beginning the workout cycles. Warmup activities generally
...
    /**
     * Return the text to display on the Start/Pause/Resume button.
     */
    val buttonText: String
        get() {
            return if (runningState.value == null) {
                "Start"
            } else {
                if (runningState.value?.isPaused() == true) {
                    "Resume"
                } else {
                    "Pause"
                }
            }
        }

    /**
     * Return true if the user can edit the text fields.
...
