...
        Button(
            onClick = {
                viewModel.onResetClick()
            },
            modifier = Modifier.semantics { contentDescription = "Reset workout timer" },
        ) {
            Text(text = "Reset", modifier = modifier)
        }
    }
}

/***
 * Display the current cycle number.
...
